RESOLVED FIXED200833
[JSC] Correct a->an in error messages and API docblocks
https://bugs.webkit.org/show_bug.cgi?id=200833
Summary [JSC] Correct a->an in error messages and API docblocks
Ross Kirsling
Reported 2019-08-16 14:53:28 PDT
[JSC] Correct a->an in error messages and API docblocks
Attachments
Patch (13.84 KB, patch)
2019-08-16 14:55 PDT, Ross Kirsling
no flags
Ross Kirsling
Comment 1 2019-08-16 14:55:21 PDT
Ross Kirsling
Comment 2 2019-08-16 14:56:27 PDT
Addresses bug 200829 comment 2. :)
WebKit Commit Bot
Comment 3 2019-08-18 13:27:13 PDT
Comment on attachment 376544 [details] Patch Clearing flags on attachment: 376544 Committed r248833: <https://trac.webkit.org/changeset/248833>
WebKit Commit Bot
Comment 4 2019-08-18 13:27:14 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-08-18 13:28:18 PDT
Note You need to log in before you can comment on or make changes to this bug.