[JSC] Correct a->an in error messages and API docblocks https://bugs.webkit.org/show_bug.cgi?id=200833

Reviewed by Don Olmstead.

JSTests:

* ChakraCore/test/UnitTestFramework/UnitTestFramework.js:
(assert.assert.return.throws):
* stress/promise-finally-should-accept-non-promise-objects.js:
* wasm/js-api/table.js:
(assert.throws):

Source/JavaScriptCore:

* API/JSObjectRef.h:
* builtins/PromiseConstructor.js:
(race):
(reject):
(resolve):
* builtins/PromisePrototype.js:
(finally):
* jsc.cpp:
(functionAsyncTestStart):
* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseIfStatement):
* wasm/WasmSectionParser.cpp:
(JSC::Wasm::SectionParser::parseResizableLimits):


Canonical link: https://commits.webkit.org/214607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248833 268f45cc-cd09-0410-ab3c-d52691b4dbfc